# TODOAPI

./: .gitignore  Makefile  README.md  catalog-info.yaml  conftest.py  docker-compose.yml  pyproject.toml  pytest.ini
docs/: index.md  openapi.json
src/: alembic.ini
src/alembic/: env.py
src/alembic/versions/: 1b1d89319130_initial_todo_table.py  4883c98b8cd5_add_created_at_and_updated_at_to_todo.py  4890967d58de_changed_status_column.py  80c5e133437d_added_column_title.py
src/app/: main.py  settings.py
src/app/api/: api.py  health.py  meta.py  todo.py
src/app/models/: todo.py
src/app/repositories/: todo_repositories.py
src/app/schemas/: todo_schema.py
src/app/schemas/enums/: todo.py
src/app/tests/: health_test.py  meta_test.py
src/app/tests/api/: todos_test.py
todo-backend-api/: catalog-info.yaml
